fix: upload pic del btn vertical-align value

--- a/src/upload/index.less
+++ b/src/upload/index.less
@@ -459,6 +459,16 @@
       opacity: 0;
       transition: all 0.3s;
 
+      > a:first-child {
+        display: inline-flex;
+        align-items: center;
+        height: 24px;
+      }
+
+      .@{ant-prefix}-btn-icon-only {
+        vertical-align: 0;
+      }
+
       .@{iconfont-css-prefix}-eye,
       .@{iconfont-css-prefix}-download,
       .@{iconfont-css-prefix}-delete {
